[gd_scene load_steps=4 format=3 uid="uid://xn1ixdo80xjb"]

[ext_resource type="Script" path="res://scripts/items.gd" id="1_se3y8"]
[ext_resource type="Texture2D" uid="uid://dsmaswcxgbhak" path="res://sprites/menu/gear_info.png" id="2_tjd2h"]
[ext_resource type="FontFile" uid="uid://bbrmpyhagtyct" path="res://font/PIXY.ttf" id="3_04odl"]

[node name="item" type="Node2D"]
script = ExtResource("1_se3y8")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Button" type="Button" parent="Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0

[node name="GearInfo" type="Sprite2D" parent="."]
visible = false
position = Vector2(23, 15)
texture = ExtResource("2_tjd2h")

[node name="Delete" type="Button" parent="GearInfo"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 11.0
offset_top = 3.0
offset_right = 20.0
offset_bottom = 12.0

[node name="Label" type="Label" parent="GearInfo"]
offset_left = -19.0
offset_top = -12.0
offset_right = 21.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("3_04odl")
theme_override_font_sizes/font_size = 5
text = "Name:"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="GearInfo"]
offset_left = -19.0
offset_top = -4.0
offset_right = 21.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("3_04odl")
theme_override_font_sizes/font_size = 5
text = "Damage:"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Sprite2D/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GearInfo/Delete" to="." method="_on_delete_pressed"]
